--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: simPopulation
+Package: simPopulation2
 Type: Package
 Title: Simulation of synthetic populations for surveys based on sample
         data
@@ -6,7 +6,7 @@ Version: 0.4.0
 Date: 2012-02-12
 Author: Andreas Alfons and Stefan Kraft
 Maintainer: Andreas Alfons <andreas.alfons@econ.kuleuven.be>
-Depends: R(>= 2.10.0), nnet, POT, lattice, vcd
+Depends: R(>= 2.10.0), nnet, POT, lattice, vcd, parallel, klaR, rpart, LiblineaR
 Imports: lattice, vcd
 Description: Simulate populations for surveys based on sample data with
         special application to EU-SILC.
