--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Version: 0.4.0
 Date: 2012-02-12
 Author: Andreas Alfons and Stefan Kraft
 Maintainer: Andreas Alfons <andreas.alfons@econ.kuleuven.be>
-Depends: R(>= 2.10.0), nnet, POT, lattice, vcd, parallel, klaR, rpart, LiblineaR
+Depends: R(>= 2.10.0), nnet, POT, lattice, vcd, parallel, e1071, party, LiblineaR
 Imports: lattice, vcd
 Description: Simulate populations for surveys based on sample data with
         special application to EU-SILC.
