--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,12 @@
-Package: simPopulation2
+Package: synthPop
 Type: Package
-Title: Simulation of synthetic populations for surveys based on sample
-        data
-Version: 0.4.0
-Date: 2012-02-12
-Author: Andreas Alfons and Stefan Kraft
-Maintainer: Andreas Alfons <andreas.alfons@econ.kuleuven.be>
-Depends: R(>= 2.10.0), nnet, POT, lattice, vcd, parallel, e1071, party, LiblineaR
-Imports: lattice, vcd
-Description: Simulate populations for surveys based on sample data with
-        special application to EU-SILC.
+Title: Simulation of synthetic populations for surveys based on auxiliary data
+Version: 0.1.0
+Date: 2014-04-11
+Author: Matthias Templ and Bernhard Meindl and Alexander Kowarik and Andreas Alfons
+Maintainer: Matthias Templ <matthias.templ@gmail.com>
+Depends: R(>= 2.10.0), nnet, POT, lattice, vcd, parallel, data.table
+LazyLoad: yes
+Description: Simulate populations for surveys based on auxiliary data.
 License: GPL (>= 2)
 LazyLoad: yes
-Packaged: 2012-02-12 20:56:53 UTC; andi
-Repository: CRAN
-Date/Publication: 2012-02-12 21:51:11
