--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,6 +6,7 @@ Date: 2014-04-11
 Author: Matthias Templ and Bernhard Meindl and Alexander Kowarik and Andreas Alfons
 Maintainer: Matthias Templ <matthias.templ@gmail.com>
 Depends: R(>= 2.10.0), nnet, POT, lattice, vcd, parallel, data.table
+Imports: laeken
 LazyLoad: yes
 Description: Simulate populations for surveys based on auxiliary data.
 License: GPL (>= 2)
