--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: synthPop
 Type: Package
 Title: Simulation of synthetic populations for surveys based on auxiliary data
-Version: 0.1.0
+Version: 0.1.1
 Date: 2014-04-11
 Author: Matthias Templ and Bernhard Meindl and Alexander Kowarik and Andreas Alfons
 Maintainer: Matthias Templ <matthias.templ@gmail.com>
-Depends: R(>= 2.10.0), nnet, POT, lattice, vcd, parallel, data.table
-Imports: laeken
-LazyLoad: yes
+Depends: R(>= 3.0.0), nnet, POT, lattice, vcd, parallel, data.table
+Imports: laeken, Rcpp (>= 0.11.0)
+LinkingTo: Rcpp
 Description: Simulate populations for surveys based on auxiliary data.
 License: GPL (>= 2)
 LazyLoad: yes
