--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Date: 2014-04-18
 Author: Matthias Templ and Bernhard Meindl and Alexander Kowarik and Andreas Alfons
 Maintainer: Matthias Templ <matthias.templ@gmail.com>
 Depends: R(>= 3.0.0), nnet, POT, lattice, vcd, parallel, data.table
-Imports: laeken, Rcpp (>= 0.11.0)
+Imports: laeken, MASS, Rcpp (>= 0.11.0)
 LinkingTo: Rcpp
 Description: Simulate populations for surveys based on auxiliary data.
 License: GPL (>= 2)
