--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: synthPop
 Type: Package
 Title: Simulation of synthetic populations for surveys based on auxiliary data
-Version: 0.1.3
-Date: 2014-04-24
+Version: 0.1.4
+Date: 2014-05-07
 Author: Matthias Templ and Bernhard Meindl and Alexander Kowarik and Andreas Alfons
 Maintainer: Matthias Templ <matthias.templ@gmail.com>
-Depends: R(>= 3.0.0), nnet, POT, lattice, vcd, parallel, data.table
-Imports: laeken, MASS, Rcpp (>= 0.11.0)
+Depends: R(>= 3.0.0), lattice, vcd
+Imports: laeken, MASS, Rcpp (>= 0.11.0), e1071, data.table, parallel, nnet, POT, methods
 LinkingTo: Rcpp
 Description: Simulate populations for surveys based on auxiliary data.
 License: GPL (>= 2)
