--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,8 @@ importFrom(laeken, calibVars)
 importFrom(MASS, ginv)
 
 ## exports
+exportMethods("auxData")
+exportMethods("auxData<-")
 export(
   calibPop,
   calibVars,
@@ -47,7 +49,8 @@ export(
 )
 
 exportClasses(
-  "dataObj", "synthPopObj"
+  dataObj, 
+  synthPopObj
 )
 
 ## register methods for S3 generics defined in this package
