--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: synthPop
 Type: Package
 Title: Simulation of synthetic populations for surveys based on auxiliary data
-Version: 0.1.8
-Date: 2014-05-22
-Author: Matthias Templ[aut], Bernhard Meindl[aut], Alexander Kowarik[aut], Andreas Alfons[aut] and Mathieu Ribatet[cph]
-Maintainer: Matthias Templ <matthias.templ@gmail.com>
+Version: 0.1.9
+Date: 2014-07-19
+Author: Bernhard Meindl, Matthias Templ, Andreas Alfons, Alexander Kowarik
+Maintainer: Matthias Templ and Bernhard Meindl <office@data-analysis.com>
 Depends: R(>= 3.0.0), lattice, vcd, data.table
 Imports: laeken, MASS, Rcpp (>= 0.11.0), e1071, parallel, nnet, doParallel, foreach, methods
 LinkingTo: Rcpp
