--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Date: 2014-08-19
 Author: Bernhard Meindl, Matthias Templ, Andreas Alfons, Alexander Kowarik
 Maintainer: Matthias Templ and Bernhard Meindl <office@data-analysis.com>
 Depends: R(>= 3.0.0), lattice, vcd, data.table
-Imports: laeken, MASS, Rcpp (>= 0.11.0), e1071, parallel, nnet, doParallel, foreach, methods
+Imports: laeken, MASS, Rcpp (>= 0.11.0), e1071, parallel, nnet, doParallel, foreach, colorspace, methods
 LinkingTo: Rcpp
 Description: Simulate populations for surveys based on auxiliary data.
 License: GPL (>= 2)
