--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,15 @@
 Package: synthPop
 Type: Package
 Title: Simulation of synthetic populations for surveys based on auxiliary data
-Version: 0.2.4
-Date: 2014-08-20
+Version: 0.2.5
+Date: 2014-09-02
 Author: Bernhard Meindl, Matthias Templ, Andreas Alfons, Alexander Kowarik
 Maintainer: Matthias Templ and Bernhard Meindl <office@data-analysis.com>
 Depends: R(>= 3.0.0), lattice, vcd, data.table
 Imports: laeken, MASS, Rcpp (>= 0.11.0), e1071, parallel, nnet, doParallel, foreach, colorspace, methods
 LinkingTo: Rcpp
-Description: Simulate populations for surveys based on auxiliary data.
+Description: Simulate populations for surveys based on auxiliary data including model-based methods, calibration  and 
+combinatorial optimization tools. 
+Devoloped with support of the International Household Survey Network, DFID Trust Fund TF011722
 License: GPL (>= 2)
 LazyLoad: yes
