--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
-Package: synthPop
+Package: simPop
 Type: Package
 Title: Simulation of synthetic populations for surveys based on auxiliary data
 Version: 0.2.6
 Date: 2014-09-17
 Author: Bernhard Meindl, Matthias Templ, Andreas Alfons, Alexander Kowarik
-Maintainer: Matthias Templ and Bernhard Meindl <office@data-analysis.com>
+Maintainer: Matthias Templ<matthias.templ@gmail.com>
 Depends: R(>= 3.0.0), lattice, vcd, data.table
 Imports: laeken, MASS, Rcpp (>= 0.11.0), e1071, parallel, nnet, doParallel, foreach, colorspace, methods
 LinkingTo: Rcpp
