--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,7 @@ import(parallel)
 import(vcd)
 import(methods)
 import("Rcpp")
-importFrom(lattice, bwplot, panel.bwplot)
+importFrom(lattice, bwplot, panel.bwplot,packet.number,panel.points,panel.refline,panel.xyplot)
 importFrom(laeken, calibVars)
 importFrom(MASS, ginv)
 importFrom(colorspace, diverge_hcl)
