--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: simPop
 Type: Package
 Title: Simulation of Synthetic Populations for Survey Data Considering Auxiliary Information
-Version: 0.2.9
-Date: 2015-01-07
+Version: 0.2.10
+Date: 2015-08-20
 Author: Bernhard Meindl, Matthias Templ, Andreas Alfons, Alexander Kowarik, and with contributions from Mathieu Ribatet
 Maintainer: Matthias Templ<matthias.templ@gmail.com>
 Depends: R(>= 3.0.0), lattice, vcd, data.table
-Imports: laeken, MASS, Rcpp (>= 0.11.0), e1071, parallel, nnet, doParallel, foreach, colorspace, methods
+Imports: laeken, MASS, Rcpp (>= 0.11.0), e1071, parallel, nnet, doParallel, foreach, colorspace, VIM, methods
 LinkingTo: Rcpp
-Description: Simulate populations for surveys based on auxiliary data including model-based methods, calibration  and combinatorial optimization tools. Developed with support of the International Household Survey Network, DFID Trust Fund TF011722
+Description: This package provides tools and methods to simulate populations for surveys based on auxiliary data. The tools include model-based methods, calibration and combinatorial optimization algorithms. The package was developed with support of the International Household Survey Network, DFID Trust Fund TF011722.
 License: GPL (>= 2)
 LazyLoad: yes
