pop,pop<-,samp and samp<- methods; adjusted manageSimPopObj() to use these methods; 0.9.11

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,10 @@ exportMethods("popObj<-")
 exportMethods("popData")
 exportMethods("tableObj")
 exportMethods("addWeights<-")
+exportMethods("samp")
+exportMethods("samp<-")
+exportMethods("pop")
+exportMethods("pop<-")
 export(
   addKnownMargins,
   calibPop,
