+fix in simCategorical() if level-set of response factor in some strata differs from level set of the complete sample. +some small roxygen fixes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(contingencyWt,default)
 S3method(contingencyWt,matrix)
 S3method(corWt,data.frame)
 S3method(corWt,dataObj)
+S3method(corWt,default)
 S3method(corWt,matrix)
 S3method(covWt,data.frame)
 S3method(covWt,dataObj)
@@ -30,7 +31,6 @@ export(calibSample)
 export(calibVars)
 export(contingencyWt)
 export(corWt)
-export(corWt.default)
 export(covWt)
 export(crossprodWt)
 export(factorNA)
