@name to alias functions to avoid error -- must be undone for documentation, but it is now the dirty waz to make the package running.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,6 +24,7 @@ Collate:
     'getCat.R'
     'get_silc.R'
     'ipu.r'
+    'loadSilc.R'
     'meanWt.R'
     'printFunctions.R'
     'quantileWt.R'
