--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,35 @@
 Package: simPop
 Type: Package
-Title: Simulation of Synthetic Populations for Survey Data Considering Auxiliary Information
-Version: 0.2.2
-Date: 2015-11-13
-Author: Bernhard Meindl, Matthias Templ, Andreas Alfons, Alexander Kowarik, and with contributions from Mathieu Ribatet
+Title: Simulation of Synthetic Populations for Survey Data Considering Auxiliary
+    Information
+Version: 0.2.3
+Date: 2015-11-26
+Author: Bernhard Meindl, Matthias Templ, Andreas Alfons, Alexander Kowarik, and
+    with contributions from Mathieu Ribatet
 Maintainer: Matthias Templ <matthias.templ@gmail.com>
-Depends: R(>= 3.0.0), lattice, vcd, data.table
-Imports: laeken, MASS, Rcpp (>= 0.11.0), e1071, parallel, nnet, doParallel, foreach, colorspace, VIM, methods
+Depends:
+    R(>= 3.0.0),
+    lattice,
+    vcd,
+    data.table
+Imports:
+    laeken,
+    MASS,
+    Rcpp (>= 0.11.0),
+    e1071,
+    parallel,
+    nnet,
+    doParallel,
+    foreach,
+    colorspace,
+    VIM,
+    methods
+Suggests: haven, plyr
 LinkingTo: Rcpp
-Description: Tools and methods to simulate populations for surveys based on auxiliary data. The tools include model-based methods, calibration and combinatorial optimization algorithms. The package was developed with support of the International Household Survey Network, DFID Trust Fund TF011722.
+Description: Tools and methods to simulate populations for surveys based
+    on auxiliary data. The tools include model-based methods, calibration and
+    combinatorial optimization algorithms. The package was developed with support of
+    the International Household Survey Network, DFID Trust Fund TF011722.
 License: GPL (>= 2)
 LazyLoad: yes
 Collate:
@@ -54,3 +75,4 @@ Collate:
     'whipple.R'
     'dataSets.R'
     'zzz.R'
+RoxygenNote: 5.0.1
