fix cran notes and warnings

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -112,6 +112,7 @@ import(foreach)
 import(methods)
 import(nnet)
 import(parallel)
+import(party)
 import(vcd)
 importFrom(MASS,ginv)
 importFrom(VIM,hotdeck)
