update namespace (document())

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -133,12 +133,14 @@ importFrom(stats,cor)
 importFrom(stats,cov)
 importFrom(stats,dlogis)
 importFrom(stats,formula)
+importFrom(stats,glm)
 importFrom(stats,lm)
 importFrom(stats,mad)
 importFrom(stats,median)
 importFrom(stats,model.matrix)
 importFrom(stats,optim)
 importFrom(stats,plogis)
+importFrom(stats,poisson)
 importFrom(stats,ppoints)
 importFrom(stats,predict)
 importFrom(stats,quantile)
@@ -148,6 +150,7 @@ importFrom(stats,runif)
 importFrom(stats,uniroot)
 importFrom(stats,var)
 importFrom(stats,weighted.mean)
+importFrom(utils,head)
 importFrom(utils,read.csv2)
 importFrom(utils,tail)
 useDynLib(simPop)
