first version truncated log-normal age heaping

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ export(chooseSILCvars)
 export(conditional.dis)
 export(contingencyWt)
 export(corWt)
+export(correctHeap)
 export(covWt)
 export(factorNA)
 export(getAge)
@@ -104,19 +105,23 @@ exportMethods(popObj)
 exportMethods(sampleData)
 exportMethods(sampleObj)
 exportMethods(tableObj)
+import(EnvStats)
 import(Rcpp)
 import(data.table)
 import(doParallel)
 import(e1071)
+import(fitdistrplus)
 import(foreach)
 import(methods)
 import(nnet)
 import(parallel)
 import(party)
 import(vcd)
+importFrom(EnvStats,rlnormTrunc)
 importFrom(MASS,ginv)
 importFrom(VIM,hotdeck)
 importFrom(colorspace,heat_hcl)
+importFrom(fitdistrplus,fitdist)
 importFrom(graphics,par)
 importFrom(laeken,calibVars)
 importFrom(lattice,bwplot)
