--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Simulation of Synthetic Populations for Survey Data Considering Auxiliary
     Information
 Version: 0.3.0
-Date: 2016-02-16
+Date: 2016-02-20
 Author: Bernhard Meindl, Matthias Templ, Andreas Alfons, Alexander Kowarik, and
     with contributions from Mathieu Ribatet
 Maintainer: Matthias Templ <matthias.templ@gmail.com>
@@ -24,7 +24,7 @@ Imports:
     foreach,
     colorspace,
     VIM,
-    methods,party
+    methods,party,EnvStats,fitdistrplus
 Suggests: haven
 LinkingTo: Rcpp
 Description: Tools and methods to simulate populations for surveys based
@@ -41,6 +41,7 @@ Collate:
     'calibSample.R'
     'calibVars.R'
     'contingencyWt.R'
+    'correctHeap.R'
     'fitGPD.R'
     'getBreaks.R'
     'getCat.R'
