Description and Namespace for ipu2

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: simPop
 Type: Package
 Title: Simulation of Synthetic Populations for Survey Data Considering Auxiliary
     Information
-Version: 0.3.0
-Date: 2016-02-20
+Version: 0.3.1
+Date: 2016-03-10
 Author: Bernhard Meindl, Matthias Templ, Andreas Alfons, Alexander Kowarik, and
     with contributions from Mathieu Ribatet
 Maintainer: Matthias Templ <matthias.templ@gmail.com>
@@ -46,6 +46,7 @@ Collate:
     'getBreaks.R'
     'getCat.R'
     'ipu.r'
+    'ipu2.r'
     'meanWt.R'
     'printFunctions.R'
     'quantileWt.R'
