--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,7 @@ export(getEcoStat)
 export(getGender)
 export(getHsize)
 export(ipu)
+export(ipu2)
 export(loadSILC)
 export(manageSimPopObj)
 export(meanWt)
@@ -93,6 +94,7 @@ export(utilityIndicator)
 export(utilityModal)
 export(varWt)
 export(whipple)
+export(kishFactor)
 exportMethods("addWeights<-")
 exportMethods("pop<-")
 exportMethods("popObj<-")
