--- a/NAMESPACE
+++ b/NAMESPACE
@@ -108,16 +108,17 @@ exportMethods(popObj)
 exportMethods(sampleData)
 exportMethods(sampleObj)
 exportMethods(tableObj)
+import(EnvStats)
 import(Rcpp)
 import(data.table)
 import(doParallel)
 import(e1071)
+import(fitdistrplus)
 import(foreach)
 import(methods)
 import(nnet)
 import(parallel)
 import(party)
-import(ranger)
 import(vcd)
 importFrom(EnvStats,rlnormTrunc)
 importFrom(MASS,ginv)
@@ -160,6 +161,4 @@ importFrom(stats,weighted.mean)
 importFrom(utils,head)
 importFrom(utils,read.csv2)
 importFrom(utils,tail)
-importFrom(EnvStats,rlnormTrunc,rnormTrunc)
-importFrom(fitdistrplus,fitdist)
 useDynLib(simPop)
