--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,8 @@ export(calibSample)
 export(calibVars)
 export(checkCol)
 export(chooseSILCvars)
+export(computeFrac)
+export(computeLinear)
 export(conditional.dis)
 export(contingencyWt)
 export(corWt)
