improve reproducibility in mclapply and checking

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -148,6 +148,7 @@ importFrom(stats,lm)
 importFrom(stats,mad)
 importFrom(stats,median)
 importFrom(stats,model.matrix)
+importFrom(stats,na.omit)
 importFrom(stats,optim)
 importFrom(stats,plogis)
 importFrom(stats,poisson)
