--- a/NAMESPACE
+++ b/NAMESPACE
@@ -136,6 +136,7 @@ importFrom(lattice,panel.points)
 importFrom(lattice,panel.refline)
 importFrom(lattice,panel.xyplot)
 importFrom(plyr,revalue)
+importFrom(ranger,ranger)
 importFrom(stats,as.formula)
 importFrom(stats,chisq.test)
 importFrom(stats,coef)
