updated simInitSpatial and prepare for next CRAN Version

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -110,7 +110,6 @@ exportMethods(popObj)
 exportMethods(sampleData)
 exportMethods(sampleObj)
 exportMethods(tableObj)
-import(EnvStats)
 import(Rcpp)
 import(data.table)
 import(doParallel)
@@ -123,6 +122,7 @@ import(parallel)
 import(party)
 import(vcd)
 importFrom(EnvStats,rlnormTrunc)
+importFrom(EnvStats,rnormTrunc)
 importFrom(MASS,ginv)
 importFrom(VIM,hotdeck)
 importFrom(colorspace,heat_hcl)
