--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: simPop
 Type: Package
 Title: Simulation of Synthetic Populations for Survey Data Considering Auxiliary
     Information
-Version: 0.7.0
+Version: 1.0.0
 Date: 2017-06-19
 Author: Bernhard Meindl, Matthias Templ, Andreas Alfons, Alexander Kowarik, and
     with contributions from Mathieu Ribatet
@@ -66,7 +66,7 @@ Collate:
     'simGPD.R'
     'simInitSpatial.R'
     'simple_dis.R'
-    'simPop-package-package.R'
+    'simPop-package.R'
     'simRelation.R'
     'simStructure.R'
     'spBwplot.R'
@@ -85,4 +85,4 @@ Collate:
     'whipple.R'
     'dataSets.R'
     'zzz.R'
-RoxygenNote: 5.0.1
+RoxygenNote: 6.0.1
