roxygen run und tests

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,7 +29,8 @@ Imports:
 Suggests:
     haven,
     microbenchmark,
-    stringr
+    stringr,
+    testthat
 LinkingTo: Rcpp
 Description: Tools and methods to simulate populations for surveys based
     on auxiliary data. The tools include model-based methods, calibration and
