new dev version number, Kirill Mueller in Description

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,10 @@ Package: simPop
 Type: Package
 Title: Simulation of Synthetic Populations for Survey Data Considering Auxiliary
     Information
-Version: 1.0.0
-Date: 2017-08-07
+Version: 1.0.1
+Date: 2017-11-12
 Author: Bernhard Meindl, Matthias Templ, Andreas Alfons, Alexander Kowarik, and
-    with contributions from Mathieu Ribatet
+    with contributions from Mathieu Ribatet and Kirill Mueller
 Maintainer: Matthias Templ <matthias.templ@gmail.com>
 URL: https://github.com/statistikat/simPop
 Depends:
