--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,10 @@ Package: simPop
 Type: Package
 Title: Simulation of Synthetic Populations for Survey Data Considering Auxiliary
     Information
-Version: 1.0.4
+Version: 1.0.5
 Date: 2017-11-30
 Author: Bernhard Meindl, Matthias Templ, Andreas Alfons, Alexander Kowarik, and
-    with contributions from Mathieu Ribatet and Kirill Mueller
+    with contributions from Mathieu Ribatet
 Maintainer: Matthias Templ <matthias.templ@gmail.com>
 URL: https://github.com/statistikat/simPop
 Depends:
@@ -25,7 +25,7 @@ Imports:
     foreach,
     colorspace,
     VIM,
-    methods,party,EnvStats,fitdistrplus,ranger
+    methods,party,EnvStats,fitdistrplus,ranger,wrswoR
 Suggests:
     haven,
     microbenchmark,
