--- a/NAMESPACE
+++ b/NAMESPACE
@@ -159,10 +159,12 @@ importFrom(stats,quantile)
 importFrom(stats,rexp)
 importFrom(stats,rnorm)
 importFrom(stats,runif)
+importFrom(stats,sd)
 importFrom(stats,uniroot)
 importFrom(stats,var)
 importFrom(stats,weighted.mean)
 importFrom(utils,head)
 importFrom(utils,read.csv2)
 importFrom(utils,tail)
+importFrom(wrswoR,sample_int_crank)
 useDynLib(simPop)
