Geometric mean via C++ function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,8 @@ export(correctHeaps)
 export(correctSingleHeap)
 export(covWt)
 export(factorNA)
+export(geometric_mean)
+export(geometric_mean_reference)
 export(getAge)
 export(getBreaks)
 export(getBwplotStats)
