--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(calibSample)
 export(calibVars)
 export(checkCol)
 export(chooseSILCvars)
+export(combine_factors)
 export(computeFrac)
 export(computeLinear)
 export(conditional.dis)
@@ -57,6 +58,9 @@ export(getGender)
 export(getHsize)
 export(ipu)
 export(ipu2)
+export(ipu_step)
+export(ipu_step_f)
+export(ipu_step_ref)
 export(kishFactor)
 export(loadSILC)
 export(manageSimPopObj)
