Support geometric and arithmetic mean in ipu2
see meanHH documentation in ?ipu2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export("popObj<-")
 export("samp<-")
 export("sampleObj<-")
 export(addKnownMargins)
+export(arithmetic_mean)
 export(calibPop)
 export(calibSample)
 export(calibVars)
