Add documentation for numericalWeighing
The two functions available for numericalWeighting are now documented in a seperated .Rd file. The corresponding documentation page is linked to in ?ipu2.

The input variables have been renamed to make the documentation more readable while being consistent with the syntax.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -53,6 +53,7 @@ Collate:
     'getBreaks.R'
     'getCat.R'
     'ipu.r'
+    'numericalWeighting.R'
     'ipu2.r'
     'meanWt.R'
     'printFunctions.R'
