Changes for devools::check()
* resolve mismatch in documentation (asfactor != as_factor)
* add reshape2 to the Depends field for the ipu_step example
* Avoid 'no visible binding for global variable ...' by initializing to NULL
     V1 <- baseweight <- NULL

The last error occures since the check does not deal properly with non-standard evaluation
(NSE). See here: https://github.com/Rdatatable/data.table/issues/850

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,7 +30,8 @@ Suggests:
     haven,
     microbenchmark,
     stringr,
-    testthat
+    testthat,
+    reshape2
 LinkingTo: Rcpp,RcppArmadillo
 Description: Tools and methods to simulate populations for surveys based
     on auxiliary data. The tools include model-based methods, calibration and
