--- a/NAMESPACE
+++ b/NAMESPACE
@@ -131,6 +131,7 @@ import(vcd)
 importFrom(EnvStats,rlnormTrunc)
 importFrom(EnvStats,rnormTrunc)
 importFrom(MASS,ginv)
+importFrom(RcppArmadillo,armadillo_version)
 importFrom(VIM,hotdeck)
 importFrom(colorspace,heat_hcl)
 importFrom(fitdistrplus,fitdist)
