--- a/NAMESPACE
+++ b/NAMESPACE
@@ -171,6 +171,7 @@ importFrom(stats,sd)
 importFrom(stats,uniroot)
 importFrom(stats,var)
 importFrom(stats,weighted.mean)
+importFrom(stats,xtabs)
 importFrom(utils,head)
 importFrom(utils,read.csv2)
 importFrom(utils,tail)
