Make `ipu2` work with constraints only describing parts of the population
For example a contingency table of the form

     | hsize\sex   | Male    | Female  |
     | ----------- | ------- | ------- |
     | 1           | 301     | 702     |
     | 2           | 403     | 428     |

can now be used without specifying constraints for households containing more than
two persons.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,6 +25,7 @@ Imports:
     foreach,
     colorspace,
     VIM,
+    dplyr,
     methods,party,EnvStats,fitdistrplus,ranger,wrswoR
 Suggests:
     haven,
