--- a/NAMESPACE
+++ b/NAMESPACE
@@ -134,6 +134,7 @@ importFrom(MASS,ginv)
 importFrom(RcppArmadillo,armadillo_version)
 importFrom(VIM,hotdeck)
 importFrom(colorspace,heat_hcl)
+importFrom(dplyr,"%>%")
 importFrom(fitdistrplus,fitdist)
 importFrom(graphics,par)
 importFrom(laeken,calibVars)
