--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ export(chooseSILCvars)
 export(combine_factors)
 export(computeFrac)
 export(computeLinear)
+export(computeLinearG1)
 export(conditional.dis)
 export(contingencyWt)
 export(corWt)
