--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: simPop
 Type: Package
 Title: Simulation of Synthetic Populations for Survey Data Considering Auxiliary
     Information
-Version: 1.1.5
-Date: 2019-01-03
+Version: 1.2.0
+Date: 2019-01-04
 Author: Bernhard Meindl, Matthias Templ, Andreas Alfons, Alexander Kowarik and
     with contributions from Mathieu Ribatet, Johannes Gussenbauer and Gregor De Cillia
 Maintainer: Matthias Templ <matthias.templ@gmail.com>
@@ -31,7 +31,7 @@ Suggests:
     microbenchmark,
     stringr,
     testthat,
-    reshape2
+    surveysd
 LinkingTo: Rcpp,RcppArmadillo
 Description: Tools and methods to simulate populations for surveys based
     on auxiliary data. The tools include model-based methods, calibration and
@@ -54,7 +54,6 @@ Collate:
     'getBreaks.R'
     'getCat.R'
     'ipu.r'
-    'numericalWeighting.R'
     'ipu2.r'
     'meanWt.R'
     'printFunctions.R'
@@ -90,4 +89,4 @@ Collate:
     'whipple.R'
     'dataSets.R'
     'zzz.R'
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.1
