--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,9 +4,13 @@ Title: Simulation of Synthetic Populations for Survey Data Considering Auxiliary
     Information
 Version: 1.2.0
 Date: 2019-01-04
-Author: Bernhard Meindl, Matthias Templ, Andreas Alfons, Alexander Kowarik and
-    with contributions from Mathieu Ribatet, Johannes Gussenbauer and Gregor De Cillia
-Maintainer: Matthias Templ <matthias.templ@gmail.com>
+Authors@R: c(
+  person("Matthias", "Templ", email = "matthias.templ@gmail.com", role = c("aut","cre")),
+  person("Alexander", "Kowarik", email = "alexander.kowarik@statistik.gv.at", role = c("aut"), comment=c(ORCID="0000-0001-8598-4130")),
+  person("Bernhard", "Meindl", email = "bernhard.meindl@statistik.gv.at", role = c("aut")),
+  person("Andreas", "Alfons", role = c("aut")),
+  person("Mathieu", "Ribatet", role = c("ctb")),
+  person("Johannes", "Gussenbauer", email = "johannes.gussenbauer@statistik.gv.at", role = c("ctb")))
 URL: https://github.com/statistikat/simPop
 Depends:
     R(>= 3.0.0),
