--- a/NAMESPACE
+++ b/NAMESPACE
@@ -134,6 +134,8 @@ importFrom(lattice,panel.bwplot)
 importFrom(lattice,panel.points)
 importFrom(lattice,panel.refline)
 importFrom(lattice,panel.xyplot)
+importFrom(matrixStats,colMeans2)
+importFrom(matrixStats,colSds)
 importFrom(plyr,revalue)
 importFrom(ranger,ranger)
 importFrom(stats,as.formula)
@@ -159,6 +161,7 @@ importFrom(stats,rexp)
 importFrom(stats,rnorm)
 importFrom(stats,runif)
 importFrom(stats,sd)
+importFrom(stats,terms)
 importFrom(stats,uniroot)
 importFrom(stats,var)
 importFrom(stats,weighted.mean)
