--- a/NAMESPACE
+++ b/NAMESPACE
@@ -167,4 +167,6 @@ importFrom(utils,head)
 importFrom(utils,read.csv2)
 importFrom(utils,tail)
 importFrom(wrswoR,sample_int_crank)
+importFrom(xgboost,xgb.DMatrix)
+importFrom(xgboost,xgb.train)
 useDynLib(simPop)
