prepared keras implementation - added kerase test

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -127,6 +127,9 @@ importFrom(VIM,hotdeck)
 importFrom(colorspace,heat_hcl)
 importFrom(fitdistrplus,fitdist)
 importFrom(graphics,par)
+importFrom(keras,keras_model_sequential)
+importFrom(keras,layer_dense)
+importFrom(keras,layer_flatten)
 importFrom(laeken,calibVars)
 importFrom(lattice,bwplot)
 importFrom(lattice,packet.number)
