md-documentation and exported stats::terms

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -159,6 +159,7 @@ importFrom(stats,rexp)
 importFrom(stats,rnorm)
 importFrom(stats,runif)
 importFrom(stats,sd)
+importFrom(stats,terms)
 importFrom(stats,uniroot)
 importFrom(stats,var)
 importFrom(stats,weighted.mean)
