--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,6 +3,7 @@ Type: Package
 Title: Simulation of Synthetic Populations for Survey Data Considering Auxiliary
     Information
 Version: 1.2.1
+Date: 2020-11-02
 Authors@R: c(
   person("Matthias", "Templ", email = "matthias.templ@gmail.com", role = c("aut","cre")),
   person("Alexander", "Kowarik", email = "alexander.kowarik@statistik.gv.at", role = c("aut"), comment=c(ORCID="0000-0001-8598-4130")),
@@ -34,7 +35,8 @@ Suggests:
     microbenchmark,
     stringr,
     testthat,
-    surveysd
+    surveysd,
+    sampling
 LinkingTo: Rcpp,RcppArmadillo
 Description: Tools and methods to simulate populations for surveys based
     on auxiliary data. The tools include model-based methods, calibration and
