fix awesome badge and travis run

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,21 @@ r:
   - devel
 cache: packages
 
+r_packages:
+  - kableExtra
+  - covr
+  - pkgdown
+
 after_success:
-  - Rscript -e 'install.packages("covr");library(covr);coveralls()'
-  
+  - Rscript -e 'covr::coveralls()'
+
+
 notifications:
   email:
     on_success: change
     on_failure: change
+
+deploy:
+  provider: script
+  script: Rscript -e 'pkgdown::deploy_site_github()'
+  skip_cleanup: true
