--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: simPop
 Type: Package
 Title: Simulation of Complex Synthetic Data
     Information
-Version: 1.2.2
-Date: 2020-11-02
+Version: 1.2.3
+Date: 2021-06-30
 Authors@R: c(
   person("Matthias", "Templ", email = "matthias.templ@gmail.com", role = c("aut","cre")),
   person("Alexander", "Kowarik", email = "alexander.kowarik@statistik.gv.at", role = c("aut"), comment=c(ORCID="0000-0001-8598-4130")),
@@ -30,7 +30,8 @@ Imports:
     colorspace,
     VIM,
     methods,party,EnvStats,fitdistrplus,ranger,wrswoR,
-    data.table
+    data.table,
+    matrixStats
 Suggests:
     haven,
     microbenchmark,
