--- a/NAMESPACE
+++ b/NAMESPACE
@@ -149,8 +149,10 @@ importFrom(stats,glm)
 importFrom(stats,lm)
 importFrom(stats,mad)
 importFrom(stats,median)
+importFrom(stats,model.frame)
 importFrom(stats,model.matrix)
 importFrom(stats,na.omit)
+importFrom(stats,na.pass)
 importFrom(stats,optim)
 importFrom(stats,plogis)
 importFrom(stats,poisson)
