--- a/NAMESPACE
+++ b/NAMESPACE
@@ -125,11 +125,17 @@ importFrom(MASS,ginv)
 importFrom(RcppArmadillo,armadillo_version)
 importFrom(VIM,hotdeck)
 importFrom(colorspace,heat_hcl)
+importFrom(dplyr,"%>%")
 importFrom(fitdistrplus,fitdist)
 importFrom(graphics,par)
+importFrom(keras,array_reshape)
+importFrom(keras,compile)
+importFrom(keras,fit)
 importFrom(keras,keras_model_sequential)
 importFrom(keras,layer_dense)
+importFrom(keras,layer_dropout)
 importFrom(keras,layer_flatten)
+importFrom(keras,to_categorical)
 importFrom(laeken,calibVars)
 importFrom(lattice,bwplot)
 importFrom(lattice,packet.number)
