--- a/NAMESPACE
+++ b/NAMESPACE
@@ -119,6 +119,7 @@ import(nnet)
 import(parallel)
 import(party)
 import(vcd)
+import(xgboost)
 importFrom(EnvStats,rlnormTrunc)
 importFrom(EnvStats,rnormTrunc)
 importFrom(MASS,ginv)
@@ -172,6 +173,4 @@ importFrom(utils,head)
 importFrom(utils,read.csv2)
 importFrom(utils,tail)
 importFrom(wrswoR,sample_int_crank)
-importFrom(xgboost,xgb.DMatrix)
-importFrom(xgboost,xgb.train)
 useDynLib(simPop)
