--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ export(corWt)
 export(correctHeaps)
 export(correctSingleHeap)
 export(covWt)
+export(crossValidation)
 export(factorNA)
 export(getAge)
 export(getBreaks)
@@ -126,7 +127,15 @@ importFrom(MASS,ginv)
 importFrom(RcppArmadillo,armadillo_version)
 importFrom(VIM,hotdeck)
 importFrom(colorspace,heat_hcl)
+importFrom(dplyr,"%>%")
+importFrom(dplyr,across)
+importFrom(dplyr,arrange)
+importFrom(dplyr,group_by)
+importFrom(dplyr,pull)
+importFrom(dplyr,select)
+importFrom(dplyr,summarise)
 importFrom(fitdistrplus,fitdist)
+importFrom(forcats,fct_unify)
 importFrom(graphics,par)
 importFrom(laeken,calibVars)
 importFrom(lattice,bwplot)
