--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,6 +20,8 @@ Depends:
 Imports:
     data.table,
     laeken,
+    dplyr,
+    forcats,
     plyr,
     MASS,
     Rcpp (>= 0.11.0),RcppArmadillo,
