address issue 22 together with @kyoshido :)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -116,7 +116,6 @@ import(foreach)
 import(methods)
 import(nnet)
 import(parallel)
-import(party)
 import(vcd)
 import(xgboost)
 importFrom(EnvStats,rlnormTrunc)
@@ -135,6 +134,8 @@ importFrom(lattice,panel.refline)
 importFrom(lattice,panel.xyplot)
 importFrom(matrixStats,colMeans2)
 importFrom(matrixStats,colSds)
+importFrom(partykit,cforest)
+importFrom(partykit,ctree)
 importFrom(ranger,ranger)
 importFrom(stats,as.formula)
 importFrom(stats,chisq.test)
