--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,8 @@ Depends:
 Imports:
     data.table,
     MASS,
-    Rcpp (>= 0.11.0),RcppArmadillo,
+    Rcpp (>= 0.11.0),
+    RcppArmadillo,
     e1071,
     parallel,
     nnet,
@@ -28,8 +29,14 @@ Imports:
     foreach,
     colorspace,
     VIM,
-    methods,party,EnvStats,fitdistrplus,ranger,wrswoR,
-    matrixStats,xgboost
+    methods,
+    EnvStats,
+    fitdistrplus,
+    ranger,
+    wrswoR,
+    matrixStats,
+    xgboost,
+    partykit
 Suggests:
     haven,
     microbenchmark,
@@ -95,5 +102,5 @@ Collate:
     'whipple.R'
     'dataSets.R'
     'zzz.R'
-RoxygenNote: 7.2.1
+RoxygenNote: 7.2.2
 Encoding: UTF-8
