--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,9 @@
 
 S3method(as.array,spTable)
 S3method(as.table,spTable)
+S3method(calibPop,data.frame)
+S3method(calibPop,data.table)
+S3method(calibPop,simPopObj)
 S3method(calibVars,data.frame)
 S3method(calibVars,default)
 S3method(calibVars,matrix)
@@ -148,6 +151,7 @@ importFrom(ranger,ranger)
 importFrom(stats,as.formula)
 importFrom(stats,chisq.test)
 importFrom(stats,coef)
+importFrom(stats,complete.cases)
 importFrom(stats,cor)
 importFrom(stats,cov)
 importFrom(stats,dlogis)
@@ -170,6 +174,7 @@ importFrom(stats,rexp)
 importFrom(stats,rnorm)
 importFrom(stats,runif)
 importFrom(stats,sd)
+importFrom(stats,setNames)
 importFrom(stats,terms)
 importFrom(stats,uniroot)
 importFrom(stats,var)
