--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: simPop
 Type: Package
 Title: Simulation of Complex Synthetic Data
     Information
-Version: 2.1.3
+Version: 2.1.4
 Date: 2024-01-05
 Authors@R: c(
   person("Matthias", "Templ", email = "matthias.templ@gmail.com", role = c("aut","cre")),
@@ -35,7 +35,7 @@ Imports:
     ranger,
     wrswoR,
     matrixStats,
-    xgboost,
+    xgboost (>= 3.1.2.1),
     partykit
 Suggests:
     haven,
